--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="assets/fonts/fonts.css" rel="stylesheet">
+		<link rel="icon" href="assets/svg/favicon.svg" sizes="any" type="image/svg+xml">
+		<link rel="preload" href="assets/fonts/montserrat.woff2" as="font" type="font/woff2" crossorigin>
+		<link rel="preload" href="assets/fonts/sigmarone.woff2" as="font" type="font/woff2" crossorigin>
 		<title>True Dragons</title>
 	</head>
 	<body>
