--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="description" content="The main website of the True Dragons crypto project.">
 		<link href="assets/fonts/fonts.css" rel="stylesheet">
 		<link rel="icon" href="assets/svg/favicon.svg" sizes="any" type="image/svg+xml">
 		<link rel="preload" href="assets/fonts/montserrat.woff2" as="font" type="font/woff2" crossorigin>
